--- a/style.css
+++ b/style.css
@@ -1,189 +1,250 @@
-body {
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 6rem 0;
-  color: hsl(24, 5%, 18%);
-  background-color: hsl(30, 54%, 90%);
+@import url("https://fonts.googleapis.com/css2?family=Young+Serif&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap");
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+	padding: 0px;
+	margin: 0px;
 }
 
-.card {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  width: 36%;
-  background-color: hsl(0, 0%, 100%);
-  padding: 2.2rem;
-  border-radius: 1rem;
+:root {
+	--primary-clr-Nutmeg: hsl(14, 45%, 36%);
+	--primary-clr-Dark-Raspberry: hsl(332, 51%, 32%);
+	--neutral-clr-White: hsl(0, 0%, 100%);
+	--neutral-clr-Rose-White: hsl(330, 100%, 98%);
+	--neutral-clr-Eggshell: hsl(30, 54%, 90%);
+	--neutral-clr-Light-Grey: hsl(30, 18%, 87%);
+	--neutral-clr-Wenge-Brown: hsl(30, 10%, 34%);
+	--neutral-clr-Dark-Charcoal: hsl(24, 5%, 18%);
+	--ff-1: "Young Serif", serif;
+	--ff-2: "Outfit", serif;
+	--fs-base: 16px;
+	--fw-regular: 400;
+	--fw-semi-bold: 600;
+	--fw-bold: 700;
+}
+
+body {
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 6rem 0;
+	color: var(--neutral-clr-Dark-Charcoal);
+	background-color: hsl(30, 54%, 90%);
+}
+
+article {
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+	background-color: hsl(0, 0%, 100%);
+	padding: 2rem;
+	border-radius: 1rem;
 }
 
 img {
-  width: 100%;
-  border-radius: 6px;
+	width: 100%;
+	border-radius: 6px;
 }
 
 h1,
 h2 {
-  color: hsl(14, 45%, 36%);
-  font-family: "Young Serif", serif;
-  font-weight: 400;
+	font-family: var(--ff-1);
+	font-weight: 400;
 }
 h1 {
-  padding-top: 1rem;
-  color: hsl(24, 5%, 18%);
-  font-size: 36px;
-  line-height: 2rem;
+	padding-top: 2rem;
+	color: var(--neutral-clr-Dark-Charcoal);
+	font-size: 2.5rem;
 }
+
 h2 {
-  font-size: 28px;
+	color: var(--primary-clr-Nutmeg);
+	font-size: 1.7rem;
+	padding: 2rem 0rem;
 }
+
 p {
-  font-size: 16px;
-  line-height: 1.5rem;
-  padding-bottom: 2rem;
-}
-
-li span {
-  font-weight: 600;
-}
-h3,
-div,
-ul,
-ol {
-  list-style: none;
-  counter-reset: my-awesome-counter 0;
-  color: hsl(24, 5%, 18%);
-  font-family: "Outfit", sans-serif;
-  font-weight: 200;
-  font-style: normal;
-  line-height: 1.5rem;
-}
-
-.ingredients > ul > li {
-  margin-left: -1.5rem;
-}
-.instructions > ol > li {
-  margin-left: -1.5rem;
-}
-
-ul {
-  list-style: disc;
-  align-items: flex-start;
-}
-
-ul li::marker {
-  color: hsl(14, 45%, 36%);
-}
-
-ol li {
-  list-style-position: outside;
-  counter-increment: my-awesome-counter;
-  padding-left: 1rem;
-}
-
-ol li::marker {
-  content: counter(my-awesome-counter) ".";
-  color: hsl(14, 45%, 36%);
-  font-weight: bold;
-}
-
-ul {
-  line-height: 2rem;
+	line-height: 1.5rem;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+	color: var(--neutral-clr-Wenge-Brown);
 }
 
 h3 {
-  color: hsl(324, 29%, 40%);
-  font-weight: 700;
-  padding-left: 28px;
+	color: var(--primary-clr-Dark-Raspberry);
+	font-weight: 700;
+	padding-bottom: 0.8rem;
+	transform: translateX(-22px);
 }
 .prep-time {
-  background-color: hsl(326, 100%, 98%);
-  border-radius: 3px;
-  padding: 10px;
-  padding-top: -0.5rem;
+	background-color: hsl(326, 100%, 98%);
+	color: var(--neutral-clr-Wenge-Brown);
+	border-radius: 3px;
+	padding: 1.5rem 0rem 1.5rem 3rem;
 }
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid hsl(24, 5%, 18%, 0.4);
-  margin: 1em 0;
+.ingredients {
+	padding-left: 1.3rem;
+}
+li span {
+	font-weight: 600;
+}
+
+div,
+ul,
+ol {
+	list-style: none;
+	counter-reset: my-awesome-counter 0;
+	color: var(--neutral-clr-Dark-Charcoal);
+	font-family: var(--ff-2);
+	line-height: 1.5rem;
+}
+
+.instructions {
+	margin-left: 1.3rem;
+}
+.prep-time li,
+.ingredients li,
+.instructions li {
+	padding-left: 20px;
+}
+
+.instructions li {
+	width: 99%;
+	color: var(--neutral-clr-Wenge-Brown);
+}
+ul {
+	list-style: disc;
+	align-items: flex-start;
+}
+
+ul li::marker {
+	color: var(--primary-clr-Nutmeg);
+	font-size: 0.8rem;
+}
+
+ol li {
+	list-style-position: outside;
+	counter-increment: my-awesome-counter;
+	padding-left: 1rem;
+}
+
+ol li::marker {
+	content: counter(my-awesome-counter) ".";
+	color: var(--primary-clr-Nutmeg);
+	font-weight: bold;
+}
+
+ul {
+	color: var(--neutral-clr-Wenge-Brown);
+	line-height: 2rem;
 }
 ol li {
-  margin-bottom: 0.5rem;
+	margin-bottom: 0.5rem;
+}
+hr {
+	height: 1px;
+	border-top: 1px solid hsla(24, 5%, 18%, 0.1);
+	margin-top: 2rem;
 }
 
-h2 .ingredients .instructions > ol {
-  margin-left: -20px;
-}
-.nutrition {
-  margin-bottom: 2rem;
-}
-.nutrition div {
-  margin: 0 auto;
-  padding-left: 3rem;
-  padding-right: 16rem;
-}
-.nutrition div span {
-  color: hsl(324, 29%, 40%);
-  font-weight: 700;
-  float: right;
-  justify-items: left;
+.nutrition > p {
+	padding-top: 0px;
+	margin-top: -10px;
 }
 
-.grid-container {
-  width: 90%;
-  display: inline-grid;
-  grid-template-columns: 50% 50%;
-  padding: 0px 20px;
+.list {
+	align-items: center;
+	width: 100%;
+
+	margin-top: -50px;
+}
+
+div.grid-container {
+	margin-top: 2rem;
+	padding: 0rem 0.3rem;
+	width: 100%;
+	display: inline-grid;
+	grid-template-columns: 50% 50%;
+	margin-bottom: -12px;
 }
 
 .grid-item {
-  background-color: rgba(255, 255, 255, 0.8);
-  border-bottom: 1px solid hsl(24, 5%, 18%, 0.4);
-  padding: 20px;
-  padding-left: 1rem;
-  font-size: 16px;
-  text-align: left;
+	background-color: rgba(255, 255, 255, 0.8);
+	border-bottom: 1.5px solid hsla(24, 5%, 18%, 0.1);
+	padding: 14px;
+	padding-left: 2.5rem;
+	font-size: 16px;
+	text-align: left;
 }
 
 .grid-item:nth-last-child(1) {
-  border-bottom: 0px;
+	border-bottom: 0px;
 }
 .grid-item:nth-last-child(2) {
-  border-bottom: 0px;
+	border-bottom: 0px;
 }
 .amount {
-  font-weight: 900;
-  color: darkgoldenrod;
+	font-weight: 900;
+	color: var(--primary-clr-Nutmeg);
 }
-.list {
-  margin-top: -50px;
-}
-@media screen and (max-width: 375px) {
-  body {
-    overflow-x: hidden;
-    padding: 0px;
-    margin: 0px;
-    background-color: hsl(0, 0%, 100%);
-  }
 
-  img {
-    border-radius: 0px;
-  }
-  div.card {
-    width: 100%;
-    padding: 0px;
-    gap: 2rem;
-  }
-  div.mob {
-    padding: 2rem 2em;
-  }
-  p {
-    padding-bottom: 1rem;
-  }
-  h1 {
-    margin-top: -3rem;
-  }
+/* ------------------MOBILE----------------------- */
+
+@media screen and (max-width: 375px) {
+	body {
+		overflow-x: hidden;
+		padding: 0px;
+		margin: 0px;
+		background-color: hsl(0, 0%, 100%);
+	}
+
+	img {
+		border-radius: 0px;
+	}
+	div.mob {
+		padding: 2rem 1.8em;
+	}
+	article {
+		width: 100%;
+		padding: 0px;
+	}
+	h1 {
+		font-size: 2.2rem;
+		line-height: 2.2rem;
+		margin-top: -2rem;
+		margin-bottom: -0.8rem;
+	}
+
+	p {
+		padding-bottom: 2rem;
+	}
+	.prep-time {
+		padding-right: 1.7rem;
+	}
+	.prep-time li,
+	.ingredients li,
+	.instructions li {
+		padding-left: 15px;
+	}
+	.prep-time li:nth-child(1),
+	.ingredients li:nth-child(5) {
+		line-height: 1.5rem;
+	}
+
+	.instructions,
+	.nutrition {
+		padding-right: 0.5rem;
+	}
+	.grid-item {
+		padding-left: 1.5rem;
+	}
+	.grid-item.amount {
+		padding-left: 0.4rem;
+	}
 }
